src/components/Clients/ClientModal/ClientModal.css
.client-modal-container {
    width: 50vw;
    min-width: 700px;
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 375px;
    padding: 2% 0%;
    margin-left: 2%;
    margin-bottom: 5%;
}

.add-client-modal{ 
    width:100%;
    min-width: 20vw;
    padding-bottom: 20px;
    grid-column: 1;    
}

.action-container-client {
    grid-column: 2;
    width: 100%;
    justify-content: flex-start;
    position: relative;    
}

.action-panel {
   width: 100%;
   height: 280px;
   overflow-y: scroll;
}

.session-menu{
    width: 100%;
    min-height: 20px;
    margin: 20px 0px;
    padding-bottom: 0px;
}

.add-input-container {
    position: relative;
    width: 80%;
    display: flex;
    justify-content: flex-start;
}

.add-action-button {
    position: absolute;
    right: 5%;
    cursor: pointer;
    font-size: 1.3vw;
    padding: 3%;
}

.date-picker-box {
    border: 1px solid #c9c9c9;
    border-radius: 5px;
    padding: 3px 0px;
}

.client-price{
    width: 100%;
    height: 40px;
    background-color: black;
    color: white;
    margin: 20px 0px;
    display: flex;
    align-items: center;
    padding-left: 10px;
}

.location-search-input {
    width: 100%;
    margin-top: 20px;
    margin-bottom: 10px;
    padding: 5px;
    border: none;
    border-bottom: 1px solid black;
    outline: none;
}

.autocomplete-dropdown-container {
    width: 90%;
    position: absolute;
    z-index: 2;
    color: white;
}

.autocomplete-dropdown-container:hover {
    cursor: pointer;
}

.suggestion-item {
    background: black;
    padding: 10px 15px;
}

.suggestion-item--active {
    background: #292929;
    padding: 10px 15px;
}

.loading-container {
    width: 100%;
    min-width: 20vw;
    height: 150px;
    margin: 40px 0px;
    background: white;
    animation: fadeIn 0.7s linear;
}

@keyframes fadeIn {
    from {opacity: 0}
    to {opacity: 1}
}

